BACKPORT: drm/i915: fixup per-crtc locking in intel_release_load_detect_pipe

One of the early return cases missed the mutex unlocking. Hilarity
ensued.

This regression has been introduced in

commit 7b24056be6db7ce907baffdd4cf142ab774ea60c
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Dec 12 00:35:33 2012 +0100

    drm: don't hold crtc mutexes for connector ->detect callbacks

BUG=chromium:344930
TEST=test modeset, external monitor, general operation on daisy and
panther

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=59750
Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Tested-by: Cancan Feng <cancan.feng@intel.com>
Signed-off-by: Dave Airlie <airlied@redhat.com>
(cherry picked from commit 67c964000236497e00c646472cd6b70b5c5109c8)
Signed-off-by: David Sodman <dsodman@chromium.org>

Change-Id: I0c512fde847c707407d2a6e80051d57c1461999f
(cherry picked from commit d6621c9bdf10e635eeab6a384e87760879672355)
Signed-off-by: David Sodman <dsodman@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/210133
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>